fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,7 @@ background-color: #7e7d83;
 
 .page3Portfolio {
     padding-top: 3em;
-    height: 175vh;
+    height: 155vh;
 }
 
 .page4Resume
